# aoc-ocaml

./: LICENSE  README.md  aoc-ocaml.opam  dune-project
input/: dune
lib/utils/: dune  error.ml  iO.ml  listUtils.ml  mapUtils.ml  pairUtils.ml  reUtils.ml
lib/year2024/: day01.ml  day02.ml  day03.ml  dune
lib/year2025/: day01.ml  dune
test/: dune
