(lang dune 3.20)

(name aoc-ocaml)

(generate_opam_files true)

(source
 (github slasser-g/aoc-ocaml))

(authors "Sam Lasser <slasser@galois.com>")

(maintainers "Sam Lasser <slasser@galois.com>")

(license MIT)

(package
 (name aoc-ocaml)
 (synopsis "Advent of Code solutions in OCaml")
 (description "Advent of Code solutions in OCaml")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
